refactor: simplify server stats widget system
Replaced complex drag-and-drop grid layout with simple checkbox-based
configuration and static responsive grid display.

- Removed react-grid-layout dependency and 6 related packages
- Simplified StatsConfig from complex Widget objects to simple array
- Added Statistics tab in HostManagerEditor for checkbox selection
- Refactored Server.tsx to use CSS Grid instead of ResponsiveGridLayout
- Simplified widget components by removing edit mode and size selection
- Deleted unused AddWidgetDialog and registry files
- Fixed statsConfig serialization in backend routes

Net result: -787 lines of code, cleaner architecture.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -730,7 +730,10 @@
     "folderRenamed": "Folder \"{{oldName}}\" renamed to \"{{newName}}\" successfully",
     "failedToRenameFolder": "Failed to rename folder",
     "movedToFolder": "Host \"{{name}}\" moved to \"{{folder}}\" successfully",
-    "failedToMoveToFolder": "Failed to move host to folder"
+    "failedToMoveToFolder": "Failed to move host to folder",
+    "statistics": "Statistics",
+    "enabledWidgets": "Enabled Widgets",
+    "enabledWidgetsDesc": "Select which statistics widgets to display for this host"
   },
   "terminal": {
     "title": "Terminal",
@@ -1143,6 +1146,7 @@
     "loadAverageNA": "Avg: N/A",
     "cpuUsage": "CPU Usage",
     "memoryUsage": "Memory Usage",
+    "diskUsage": "Disk Usage",
     "rootStorageSpace": "Root Storage Space",
     "of": "of",
     "feedbackMessage": "Have ideas for what should come next for server management? Share them on",
