fix: Fixed various issues with the dashboard, tab bar, and database issues

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1158,6 +1158,7 @@
     "maxLength": "Die maximale Länge beträgt {{max}}",
     "invalidEmail": "Ungültige E-Mail-Adresse",
     "passwordMismatch": "Passwörter stimmen nicht überein",
+    "passwordLoginDisabled": "Benutzername/Passwort-Anmeldung ist derzeit deaktiviert",
     "weakPassword": "Das Passwort ist zu schwach",
     "usernameExists": "Benutzername existiert bereits",
     "emailExists": "E-Mail existiert bereits",
@@ -1381,5 +1382,38 @@
     "mobileAppInProgressDesc": "Wir arbeiten an einer speziellen mobilen App, um ein besseres Erlebnis auf Mobilgeräten zu bieten.",
     "viewMobileAppDocs": "Mobile App installieren",
     "mobileAppDocumentation": "Mobile App-Dokumentation"
+  },
+  "dashboard": {
+    "title": "Dashboard",
+    "github": "GitHub",
+    "support": "Support",
+    "discord": "Discord",
+    "donate": "Spenden",
+    "serverOverview": "Serverübersicht",
+    "version": "Version",
+    "upToDate": "Auf dem neuesten Stand",
+    "updateAvailable": "Update verfügbar",
+    "uptime": "Betriebszeit",
+    "database": "Datenbank",
+    "healthy": "Gesund",
+    "error": "Fehler",
+    "totalServers": "Server gesamt",
+    "totalTunnels": "Tunnel gesamt",
+    "totalCredentials": "Anmeldedaten gesamt",
+    "recentActivity": "Kürzliche Aktivität",
+    "reset": "Zurücksetzen",
+    "loadingRecentActivity": "Kürzliche Aktivität wird geladen...",
+    "noRecentActivity": "Keine kürzliche Aktivität",
+    "quickActions": "Schnellaktionen",
+    "addHost": "Host hinzufügen",
+    "addCredential": "Anmeldedaten hinzufügen",
+    "adminSettings": "Admin-Einstellungen",
+    "userProfile": "Benutzerprofil",
+    "serverStats": "Serverstatistiken",
+    "loadingServerStats": "Serverstatistiken werden geladen...",
+    "noServerData": "Keine Serverdaten verfügbar",
+    "cpu": "CPU",
+    "ram": "RAM",
+    "notAvailable": "Nicht verfügbar"
   }
 }
