--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1290,6 +1290,7 @@
     "maxLength": "Maximum length is {{max}}",
     "invalidEmail": "Invalid email address",
     "passwordMismatch": "Passwords do not match",
+    "passwordLoginDisabled": "Username/password login is currently disabled",
     "weakPassword": "Password is too weak",
     "usernameExists": "Username already exists",
     "emailExists": "Email already exists",
@@ -1514,5 +1515,38 @@
     "mobileAppInProgressDesc": "We're working on a dedicated mobile app to provide a better experience on mobile devices.",
     "viewMobileAppDocs": "Install Mobile App",
     "mobileAppDocumentation": "Mobile App Documentation"
+  },
+  "dashboard": {
+    "title": "Dashboard",
+    "github": "GitHub",
+    "support": "Support",
+    "discord": "Discord",
+    "donate": "Donate",
+    "serverOverview": "Server Overview",
+    "version": "Version",
+    "upToDate": "Up to Date",
+    "updateAvailable": "Update Available",
+    "uptime": "Uptime",
+    "database": "Database",
+    "healthy": "Healthy",
+    "error": "Error",
+    "totalServers": "Total Servers",
+    "totalTunnels": "Total Tunnels",
+    "totalCredentials": "Total Credentials",
+    "recentActivity": "Recent Activity",
+    "reset": "Reset",
+    "loadingRecentActivity": "Loading recent activity...",
+    "noRecentActivity": "No recent activity",
+    "quickActions": "Quick Actions",
+    "addHost": "Add Host",
+    "addCredential": "Add Credential",
+    "adminSettings": "Admin Settings",
+    "userProfile": "User Profile",
+    "serverStats": "Server Stats",
+    "loadingServerStats": "Loading server stats...",
+    "noServerData": "No server data available",
+    "cpu": "CPU",
+    "ram": "RAM",
+    "notAvailable": "N/A"
   }
 }
