--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -1270,6 +1270,7 @@
     "maxLength": "最大长度为 {{max}}",
     "invalidEmail": "邮箱地址无效",
     "passwordMismatch": "密码不匹配",
+    "passwordLoginDisabled": "用户名/密码登录当前已禁用",
     "weakPassword": "密码强度太弱",
     "usernameExists": "用户名已存在",
     "emailExists": "邮箱已存在",
@@ -1424,5 +1425,38 @@
     "mobileAppInProgressDesc": "我们正在开发专门的移动应用，为移动设备提供更好的体验。",
     "viewMobileAppDocs": "安装移动应用",
     "mobileAppDocumentation": "移动应用文档"
+  },
+  "dashboard": {
+    "title": "仪表板",
+    "github": "GitHub",
+    "support": "支持",
+    "discord": "Discord",
+    "donate": "捐赠",
+    "serverOverview": "服务器概览",
+    "version": "版本",
+    "upToDate": "已是最新",
+    "updateAvailable": "有可用更新",
+    "uptime": "运行时间",
+    "database": "数据库",
+    "healthy": "健康",
+    "error": "错误",
+    "totalServers": "服务器总数",
+    "totalTunnels": "隧道总数",
+    "totalCredentials": "凭据总数",
+    "recentActivity": "最近活动",
+    "reset": "重置",
+    "loadingRecentActivity": "正在加载最近活动...",
+    "noRecentActivity": "无最近活动",
+    "quickActions": "快速操作",
+    "addHost": "添加主机",
+    "addCredential": "添加凭据",
+    "adminSettings": "管理员设置",
+    "userProfile": "用户资料",
+    "serverStats": "服务器统计",
+    "loadingServerStats": "正在加载服务器统计...",
+    "noServerData": "无可用服务器数据",
+    "cpu": "CPU",
+    "ram": "内存",
+    "notAvailable": "不可用"
   }
 }
