fix: Squash commit of several fixes and features for many different elements

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -529,7 +529,19 @@
     "passwordRequired": "Passwort erforderlich",
     "confirmExport": "Export bestätigen",
     "exportDescription": "SSH-Hosts und Anmeldedaten als SQLite-Datei exportieren",
-    "importDescription": "SQLite-Datei mit inkrementellem Zusammenführen importieren (überspringt Duplikate)"
+    "importDescription": "SQLite-Datei mit inkrementellem Zusammenführen importieren (überspringt Duplikate)",
+    "criticalWarning": "Kritische Warnung",
+    "cannotDisablePasswordLoginWithoutOIDC": "Passwort-Login kann nicht ohne konfiguriertes OIDC deaktiviert werden! Sie müssen die OIDC-Authentifizierung konfigurieren, bevor Sie die Passwort-Anmeldung deaktivieren, sonst verlieren Sie den Zugriff auf Termix.",
+    "confirmDisablePasswordLogin": "Sind Sie sicher, dass Sie die Passwort-Anmeldung deaktivieren möchten? Stellen Sie sicher, dass OIDC ordnungsgemäß konfiguriert ist und funktioniert, bevor Sie fortfahren, sonst verlieren Sie den Zugriff auf Ihre Termix-Instanz.",
+    "passwordLoginDisabled": "Passwort-Login erfolgreich deaktiviert",
+    "passwordLoginAndRegistrationDisabled": "Passwort-Login und Registrierung neuer Konten erfolgreich deaktiviert",
+    "requiresPasswordLogin": "Erfordert aktivierte Passwort-Anmeldung",
+    "passwordLoginDisabledWarning": "Passwort-Login ist deaktiviert. Stellen Sie sicher, dass OIDC ordnungsgemäß konfiguriert ist, sonst können Sie sich nicht bei Termix anmelden.",
+    "oidcRequiredWarning": "KRITISCH: Passwort-Login ist deaktiviert. Wenn Sie OIDC zurücksetzen oder falsch konfigurieren, verlieren Sie den gesamten Zugriff auf Termix und Ihre Instanz wird unbrauchbar. Fahren Sie nur fort, wenn Sie absolut sicher sind.",
+    "confirmDisableOIDCWarning": "WARNUNG: Sie sind dabei, OIDC zu deaktivieren, während auch die Passwort-Anmeldung deaktiviert ist. Dies macht Ihre Termix-Instanz unbrauchbar und Sie verlieren den gesamten Zugriff. Sind Sie absolut sicher, dass Sie fortfahren möchten?",
+    "allowPasswordLogin": "Benutzername/Passwort-Anmeldung zulassen",
+    "failedToFetchPasswordLoginStatus": "Abrufen des Passwort-Login-Status fehlgeschlagen",
+    "failedToUpdatePasswordLoginStatus": "Aktualisierung des Passwort-Login-Status fehlgeschlagen"
   },
   "hosts": {
     "title": "Host-Manager",
@@ -623,6 +635,7 @@
     "password": "Passwort",
     "key": "Schlüssel",
     "credential": "Anmeldedaten",
+    "none": "Keine",
     "selectCredential": "Anmeldeinformationen auswählen",
     "selectCredentialPlaceholder": "Wähle eine Anmeldedaten aus...",
     "credentialRequired": "Für die Anmeldeauthentifizierung ist eine Anmeldeinformation erforderlich",
@@ -659,7 +672,32 @@
     "folderRenamed": "Ordner „ {{oldName}} “ erfolgreich in „ {{newName}} “ umbenannt",
     "failedToRenameFolder": "Ordner konnte nicht umbenannt werden",
     "movedToFolder": "Host \"{{name}}\" wurde erfolgreich nach \"{{folder}}\" verschoben",
-    "failedToMoveToFolder": "Host konnte nicht in den Ordner verschoben werden"
+    "failedToMoveToFolder": "Host konnte nicht in den Ordner verschoben werden",
+    "statistics": "Statistiken",
+    "enabledWidgets": "Aktivierte Widgets",
+    "enabledWidgetsDesc": "Wählen Sie aus, welche Statistik-Widgets für diesen Host angezeigt werden sollen",
+    "monitoringConfiguration": "Überwachungskonfiguration",
+    "monitoringConfigurationDesc": "Konfigurieren Sie, wie oft Serverstatistiken und Status überprüft werden",
+    "statusCheckEnabled": "Statusüberwachung aktivieren",
+    "statusCheckEnabledDesc": "Prüfen Sie, ob der Server online oder offline ist",
+    "statusCheckInterval": "Statusprüfintervall",
+    "statusCheckIntervalDesc": "Wie oft überprüft werden soll, ob der Host online ist (5s - 1h)",
+    "metricsEnabled": "Metriküberwachung aktivieren",
+    "metricsEnabledDesc": "CPU-, RAM-, Festplatten- und andere Systemstatistiken erfassen",
+    "metricsInterval": "Metriken-Erfassungsintervall",
+    "metricsIntervalDesc": "Wie oft Serverstatistiken erfasst werden sollen (5s - 1h)",
+    "intervalSeconds": "Sekunden",
+    "intervalMinutes": "Minuten",
+    "intervalValidation": "Überwachungsintervalle müssen zwischen 5 Sekunden und 1 Stunde (3600 Sekunden) liegen",
+    "monitoringDisabled": "Die Serverüberwachung ist für diesen Host deaktiviert",
+    "enableMonitoring": "Überwachung aktivieren in Host-Manager → Statistiken-Tab",
+    "monitoringDisabledBadge": "Überwachung Aus",
+    "statusMonitoring": "Status",
+    "metricsMonitoring": "Metriken",
+    "terminalCustomizationNotice": "Hinweis: Terminal-Anpassungen funktionieren nur in der Desktop-Website-Version. Mobile und Electron-Apps verwenden die Standard-Terminaleinstellungen des Systems.",
+    "noneAuthTitle": "Keyboard-Interactive-Authentifizierung",
+    "noneAuthDescription": "Diese Authentifizierungsmethode verwendet beim Herstellen der Verbindung zum SSH-Server die Keyboard-Interactive-Authentifizierung.",
+    "noneAuthDetails": "Keyboard-Interactive-Authentifizierung ermöglicht dem Server, Sie während der Verbindung zur Eingabe von Anmeldeinformationen aufzufordern. Dies ist nützlich für Server, die eine Multi-Faktor-Authentifizierung oder eine dynamische Passworteingabe erfordern."
   },
   "terminal": {
     "title": "Terminal",
