--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -583,7 +583,16 @@
     "passwordRequired": "Password required",
     "confirmExport": "Confirm Export",
     "exportDescription": "Export SSH hosts and credentials as SQLite file",
-    "importDescription": "Import SQLite file with incremental merge (skips duplicates)"
+    "importDescription": "Import SQLite file with incremental merge (skips duplicates)",
+    "criticalWarning": "Critical Warning",
+    "cannotDisablePasswordLoginWithoutOIDC": "Cannot disable password login without OIDC configured! You must configure OIDC authentication before disabling password login, or you will lose access to Termix.",
+    "confirmDisablePasswordLogin": "Are you sure you want to disable password login? Make sure OIDC is properly configured and working before proceeding, or you will lose access to your Termix instance.",
+    "passwordLoginDisabled": "Password login disabled successfully",
+    "passwordLoginAndRegistrationDisabled": "Password login and new account registration disabled successfully",
+    "requiresPasswordLogin": "Requires password login enabled",
+    "passwordLoginDisabledWarning": "Password login is disabled. Ensure OIDC is properly configured or you will not be able to log in to Termix.",
+    "oidcRequiredWarning": "CRITICAL: Password login is disabled. If you reset or misconfigure OIDC, you will lose all access to Termix and brick your instance. Only proceed if you are absolutely certain.",
+    "confirmDisableOIDCWarning": "WARNING: You are about to disable OIDC while password login is also disabled. This will brick your Termix instance and you will lose all access. Are you absolutely sure you want to proceed?"
   },
   "hosts": {
     "title": "Host Manager",
@@ -677,6 +686,7 @@
     "password": "Password",
     "key": "Key",
     "credential": "Credential",
+    "none": "None",
     "selectCredential": "Select Credential",
     "selectCredentialPlaceholder": "Choose a credential...",
     "credentialRequired": "Credential is required when using credential authentication",
@@ -733,7 +743,29 @@
     "failedToMoveToFolder": "Failed to move host to folder",
     "statistics": "Statistics",
     "enabledWidgets": "Enabled Widgets",
-    "enabledWidgetsDesc": "Select which statistics widgets to display for this host"
+    "enabledWidgetsDesc": "Select which statistics widgets to display for this host",
+    "monitoringConfiguration": "Monitoring Configuration",
+    "monitoringConfigurationDesc": "Configure how often server statistics and status are checked",
+    "statusCheckEnabled": "Enable Status Monitoring",
+    "statusCheckEnabledDesc": "Check if the server is online or offline",
+    "statusCheckInterval": "Status Check Interval",
+    "statusCheckIntervalDesc": "How often to check if host is online (5s - 1h)",
+    "metricsEnabled": "Enable Metrics Monitoring",
+    "metricsEnabledDesc": "Collect CPU, RAM, disk, and other system statistics",
+    "metricsInterval": "Metrics Collection Interval",
+    "metricsIntervalDesc": "How often to collect server statistics (5s - 1h)",
+    "intervalSeconds": "seconds",
+    "intervalMinutes": "minutes",
+    "intervalValidation": "Monitoring intervals must be between 5 seconds and 1 hour (3600 seconds)",
+    "monitoringDisabled": "Server monitoring is disabled for this host",
+    "enableMonitoring": "Enable monitoring in Host Manager → Statistics tab",
+    "monitoringDisabledBadge": "Monitoring Off",
+    "statusMonitoring": "Status",
+    "metricsMonitoring": "Metrics",
+    "terminalCustomizationNotice": "Note: Terminal customizations only work on desktop (website and Electron app). Mobile apps and mobile website use system default terminal settings.",
+    "noneAuthTitle": "Keyboard-Interactive Authentication",
+    "noneAuthDescription": "This authentication method will use keyboard-interactive authentication when connecting to the SSH server.",
+    "noneAuthDetails": "Keyboard-interactive authentication allows the server to prompt you for credentials during connection. This is useful for servers that require multi-factor authentication or dynamic password entry."
   },
   "terminal": {
     "title": "Terminal",
