--- a/src/locales/pt-BR/translation.json
+++ b/src/locales/pt-BR/translation.json
@@ -418,16 +418,16 @@
     "oidcConfigurationDisabled": "Configuração OIDC desativada com sucesso!",
     "failedToUpdateOidcConfig": "Falha ao atualizar configuração OIDC",
     "failedToDisableOidcConfig": "Falha ao desativar configuração OIDC",
-  "enterUsernameToMakeAdmin": "Insira o nome de usuário para tornar admin",
-  "userIsNowAdmin": "O usuário {{username}} agora é um administrador",
-  "failedToMakeUserAdmin": "Falha ao tornar o usuário administrador",
-  "removeAdminStatus": "Remover status de administrador de {{username}}?",
-  "adminStatusRemoved": "Status de administrador removido de {{username}}",
-  "failedToRemoveAdminStatus": "Falha ao remover o status de administrador",
-  "confirmDeleteUser": "Excluir usuário {{username}}? Esta ação não pode ser desfeita.",
-  "userDeletedSuccessfully": "Usuário {{username}} excluído com sucesso",
-  "failedToDeleteUser": "Falha ao excluir usuário",
-  "overrideUserInfoUrl": "Sobrescrever URL de informações do usuário (não obrigatório)",
+    "enterUsernameToMakeAdmin": "Insira o nome de usuário para tornar admin",
+    "userIsNowAdmin": "O usuário {{username}} agora é um administrador",
+    "failedToMakeUserAdmin": "Falha ao tornar o usuário administrador",
+    "removeAdminStatus": "Remover status de administrador de {{username}}?",
+    "adminStatusRemoved": "Status de administrador removido de {{username}}",
+    "failedToRemoveAdminStatus": "Falha ao remover o status de administrador",
+    "confirmDeleteUser": "Excluir usuário {{username}}? Esta ação não pode ser desfeita.",
+    "userDeletedSuccessfully": "Usuário {{username}} excluído com sucesso",
+    "failedToDeleteUser": "Falha ao excluir usuário",
+    "overrideUserInfoUrl": "Sobrescrever URL de informações do usuário (não obrigatório)",
     "databaseSecurity": "Segurança do Banco de Dados",
     "encryptionStatus": "Status da Criptografia",
     "encryptionEnabled": "Criptografia Ativada",
@@ -546,7 +546,19 @@
     "passwordRequired": "Senha necessária",
     "confirmExport": "Confirmar Exportação",
     "exportDescription": "Exportar hosts SSH e credenciais como arquivo SQLite",
-    "importDescription": "Importar arquivo SQLite com mesclagem incremental (ignora duplicados)"
+    "importDescription": "Importar arquivo SQLite com mesclagem incremental (ignora duplicados)",
+    "criticalWarning": "Aviso Crítico",
+    "cannotDisablePasswordLoginWithoutOIDC": "Não é possível desativar o login por senha sem OIDC configurado! Você deve configurar a autenticação OIDC antes de desativar o login por senha, ou perderá o acesso ao Termix.",
+    "confirmDisablePasswordLogin": "Tem certeza que deseja desativar o login por senha? Certifique-se de que o OIDC está configurado corretamente e funcionando antes de continuar, ou você perderá o acesso à sua instância do Termix.",
+    "passwordLoginDisabled": "Login por senha desativado com sucesso",
+    "passwordLoginAndRegistrationDisabled": "Login por senha e registro de novas contas desativados com sucesso",
+    "requiresPasswordLogin": "Requer login por senha ativado",
+    "passwordLoginDisabledWarning": "Login por senha está desativado. Certifique-se de que o OIDC está configurado corretamente ou você não conseguirá fazer login no Termix.",
+    "oidcRequiredWarning": "CRÍTICO: Login por senha está desativado. Se você redefinir ou configurar incorretamente o OIDC, você perderá todo o acesso ao Termix e inutilizará sua instância. Prossiga apenas se tiver absoluta certeza.",
+    "confirmDisableOIDCWarning": "AVISO: Você está prestes a desativar o OIDC enquanto o login por senha também está desativado. Isso inutilizará sua instância do Termix e você perderá todo o acesso. Tem absoluta certeza de que deseja continuar?",
+    "allowPasswordLogin": "Permitir login com nome de usuário/senha",
+    "failedToFetchPasswordLoginStatus": "Falha ao buscar status do login por senha",
+    "failedToUpdatePasswordLoginStatus": "Falha ao atualizar status do login por senha"
   },
   "hosts": {
     "title": "Gerenciador de Hosts",
@@ -598,22 +610,22 @@
     "hostAddedSuccessfully": "Host \"{{name}}\" adicionado com sucesso!",
     "hostDeletedSuccessfully": "Host \"{{name}}\" excluído com sucesso!",
     "failedToSaveHost": "Falha ao salvar host. Por favor, tente novamente.",
-  "enableTerminal": "Habilitar Terminal",
-  "enableTerminalDesc": "Habilitar/desabilitar visibilidade do host na aba Terminal",
-  "enableTunnel": "Habilitar Túnel",
-  "enableTunnelDesc": "Habilitar/desabilitar visibilidade do host na aba Túnel",
-  "enableFileManager": "Habilitar Gerenciador de Arquivos",
-  "enableFileManagerDesc": "Habilitar/desabilitar visibilidade do host na aba Gerenciador de Arquivos",
-  "defaultPath": "Caminho Padrão",
-  "defaultPathDesc": "Diretório padrão ao abrir o gerenciador de arquivos para este host",
+    "enableTerminal": "Habilitar Terminal",
+    "enableTerminalDesc": "Habilitar/desabilitar visibilidade do host na aba Terminal",
+    "enableTunnel": "Habilitar Túnel",
+    "enableTunnelDesc": "Habilitar/desabilitar visibilidade do host na aba Túnel",
+    "enableFileManager": "Habilitar Gerenciador de Arquivos",
+    "enableFileManagerDesc": "Habilitar/desabilitar visibilidade do host na aba Gerenciador de Arquivos",
+    "defaultPath": "Caminho Padrão",
+    "defaultPathDesc": "Diretório padrão ao abrir o gerenciador de arquivos para este host",
     "tunnelConnections": "Conexões de Túnel",
     "connection": "Conexão",
     "remove": "Remover",
     "sourcePort": "Porta de Origem",
-  "sourcePortDesc": "(Source refere-se aos Detalhes da Conexão Atual na aba Geral)",
+    "sourcePortDesc": "(Source refere-se aos Detalhes da Conexão Atual na aba Geral)",
     "endpointPort": "Porta de Destino",
     "endpointSshConfig": "Configuração SSH do Endpoint",
-  "tunnelForwardDescription": "Este túnel encaminhará o tráfego da porta {{sourcePort}} na máquina de origem (detalhes da conexão atual na aba Geral) para a porta {{endpointPort}} na máquina de destino.",
+    "tunnelForwardDescription": "Este túnel encaminhará o tráfego da porta {{sourcePort}} na máquina de origem (detalhes da conexão atual na aba Geral) para a porta {{endpointPort}} na máquina de destino.",
     "maxRetries": "Máximo de Tentativas",
     "maxRetriesDescription": "Número máximo de tentativas de reconexão para a conexão do túnel.",
     "retryInterval": "Intervalo de Tentativas (segundos)",
@@ -621,14 +633,14 @@
     "autoStartContainer": "Iniciar Automaticamente ao Lançar Container",
     "autoStartDesc": "Iniciar automaticamente este túnel quando o container for iniciado",
     "addConnection": "Adicionar Conexão de Túnel",
-  "sshpassRequired": "sshpass é necessário para autenticação por senha",
-  "sshpassRequiredDesc": "Para autenticação por senha em túneis, o sshpass deve estar instalado no sistema.",
-  "otherInstallMethods": "Outros métodos de instalação:",
-  "debianUbuntuEquivalent": "(Debian/Ubuntu) ou o equivalente para seu SO.",
-  "or": "ou",
-  "centosRhelFedora": "CentOS/RHEL/Fedora",
-  "macos": "macOS",
-  "windows": "Windows",
+    "sshpassRequired": "sshpass é necessário para autenticação por senha",
+    "sshpassRequiredDesc": "Para autenticação por senha em túneis, o sshpass deve estar instalado no sistema.",
+    "otherInstallMethods": "Outros métodos de instalação:",
+    "debianUbuntuEquivalent": "(Debian/Ubuntu) ou o equivalente para seu SO.",
+    "or": "ou",
+    "centosRhelFedora": "CentOS/RHEL/Fedora",
+    "macos": "macOS",
+    "windows": "Windows",
     "sshServerConfigRequired": "Configuração do Servidor SSH Necessária",
     "sshServerConfigDesc": "Para conexões de túnel, o servidor SSH deve ser configurado para permitir o encaminhamento de porta:",
     "gatewayPortsYes": "para vincular portas remotas a todas as interfaces",
@@ -676,7 +688,29 @@
     "folderRenamed": "Pasta \"{{oldName}}\" renomeada para \"{{newName}}\" com sucesso",
     "failedToRenameFolder": "Falha ao renomear pasta",
     "movedToFolder": "Host \"{{name}}\" movido para \"{{folder}}\" com sucesso",
-    "failedToMoveToFolder": "Falha ao mover host para a pasta"
+    "failedToMoveToFolder": "Falha ao mover host para a pasta",
+    "statistics": "Estatísticas",
+    "enabledWidgets": "Widgets Habilitados",
+    "enabledWidgetsDesc": "Selecione quais widgets de estatísticas exibir para este host",
+    "monitoringConfiguration": "Configuração de Monitoramento",
+    "monitoringConfigurationDesc": "Configure com que frequência as estatísticas e o status do servidor são verificados",
+    "statusCheckEnabled": "Habilitar Monitoramento de Status",
+    "statusCheckEnabledDesc": "Verificar se o servidor está online ou offline",
+    "statusCheckInterval": "Intervalo de Verificação de Status",
+    "statusCheckIntervalDesc": "Com que frequência verificar se o host está online (5s - 1h)",
+    "metricsEnabled": "Habilitar Monitoramento de Métricas",
+    "metricsEnabledDesc": "Coletar estatísticas de CPU, RAM, disco e outros sistemas",
+    "metricsInterval": "Intervalo de Coleta de Métricas",
+    "metricsIntervalDesc": "Com que frequência coletar estatísticas do servidor (5s - 1h)",
+    "intervalSeconds": "segundos",
+    "intervalMinutes": "minutos",
+    "intervalValidation": "Os intervalos de monitoramento devem estar entre 5 segundos e 1 hora (3600 segundos)",
+    "monitoringDisabled": "O monitoramento do servidor está desabilitado para este host",
+    "enableMonitoring": "Habilite o monitoramento em Gerenciador de Hosts → aba Estatísticas",
+    "monitoringDisabledBadge": "Monitoramento Desligado",
+    "statusMonitoring": "Status",
+    "metricsMonitoring": "Métricas",
+    "terminalCustomizationNotice": "Nota: As personalizações do terminal funcionam apenas na versão Desktop Website. Aplicativos Mobile e Electron usam as configurações padrão do terminal do sistema."
   },
   "terminal": {
     "title": "Terminal",
@@ -753,31 +787,31 @@
     "createNewFolder": "Criar Nova Pasta",
     "folderName": "Nome da Pasta",
     "createFolder": "Criar Pasta",
-  "warningCannotUndo": "Aviso: Esta ação não pode ser desfeita",
-  "itemPath": "Caminho do Item",
-  "thisIsDirectory": "Isto é um diretório (será excluído recursivamente)",
-  "deleting": "Excluindo...",
-  "currentPathLabel": "Caminho Atual",
-  "newName": "Novo Nome",
-  "thisIsDirectoryRename": "Isto é um diretório",
-  "renaming": "Renomeando...",
-  "fileUploadedSuccessfully": "Arquivo \"{{name}}\" enviado com sucesso",
-  "failedToUploadFile": "Falha ao enviar arquivo",
-  "fileDownloadedSuccessfully": "Arquivo \"{{name}}\" baixado com sucesso",
-  "failedToDownloadFile": "Falha ao baixar arquivo",
-  "noFileContent": "Nenhum conteúdo de arquivo recebido",
-  "filePath": "Caminho do Arquivo",
-  "fileCreatedSuccessfully": "Arquivo \"{{name}}\" criado com sucesso",
-  "failedToCreateFile": "Falha ao criar arquivo",
-  "folderCreatedSuccessfully": "Pasta \"{{name}}\" criada com sucesso",
-  "failedToCreateFolder": "Falha ao criar pasta",
-  "failedToCreateItem": "Falha ao criar item",
-  "operationFailed": "Operação {{operation}} falhou para {{name}}: {{error}}",
-  "failedToResolveSymlink": "Falha ao resolver link simbólico",
-  "itemDeletedSuccessfully": "{{type}} excluído com sucesso",
-  "itemsDeletedSuccessfully": "{{count}} itens excluídos com sucesso",
-  "failedToDeleteItems": "Falha ao excluir itens",
-  "dragFilesToUpload": "Arraste arquivos aqui para enviar",
+    "warningCannotUndo": "Aviso: Esta ação não pode ser desfeita",
+    "itemPath": "Caminho do Item",
+    "thisIsDirectory": "Isto é um diretório (será excluído recursivamente)",
+    "deleting": "Excluindo...",
+    "currentPathLabel": "Caminho Atual",
+    "newName": "Novo Nome",
+    "thisIsDirectoryRename": "Isto é um diretório",
+    "renaming": "Renomeando...",
+    "fileUploadedSuccessfully": "Arquivo \"{{name}}\" enviado com sucesso",
+    "failedToUploadFile": "Falha ao enviar arquivo",
+    "fileDownloadedSuccessfully": "Arquivo \"{{name}}\" baixado com sucesso",
+    "failedToDownloadFile": "Falha ao baixar arquivo",
+    "noFileContent": "Nenhum conteúdo de arquivo recebido",
+    "filePath": "Caminho do Arquivo",
+    "fileCreatedSuccessfully": "Arquivo \"{{name}}\" criado com sucesso",
+    "failedToCreateFile": "Falha ao criar arquivo",
+    "folderCreatedSuccessfully": "Pasta \"{{name}}\" criada com sucesso",
+    "failedToCreateFolder": "Falha ao criar pasta",
+    "failedToCreateItem": "Falha ao criar item",
+    "operationFailed": "Operação {{operation}} falhou para {{name}}: {{error}}",
+    "failedToResolveSymlink": "Falha ao resolver link simbólico",
+    "itemDeletedSuccessfully": "{{type}} excluído com sucesso",
+    "itemsDeletedSuccessfully": "{{count}} itens excluídos com sucesso",
+    "failedToDeleteItems": "Falha ao excluir itens",
+    "dragFilesToUpload": "Arraste arquivos aqui para enviar",
     "emptyFolder": "Esta pasta está vazia",
     "itemCount": "{{count}} itens",
     "selectedCount": "{{count}} selecionados",
@@ -960,7 +994,7 @@
     "fileSavedSuccessfully": "Arquivo salvo com sucesso",
     "autoSaveFailed": "Falha no salvamento automático",
     "fileAutoSaved": "Arquivo salvo automaticamente",
-    
+
     "moveFileFailed": "Falha ao mover {{name}}",
     "moveOperationFailed": "Falha na operação de mover",
     "canOnlyCompareFiles": "Só é possível comparar dois arquivos",
@@ -1378,57 +1412,57 @@
     "passwordRequired": "Senha é obrigatória quando usar autenticação por senha",
     "sshKeyRequired": "Chave Privada SSH é obrigatória quando usar autenticação por chave",
     "keyTypeRequired": "Tipo de Chave é obrigatório quando usar autenticação por chave",
-  "validSshConfigRequired": "Deve selecionar uma configuração SSH válida da lista",
-  "updateHost": "Atualizar Host",
-  "addHost": "Adicionar Host",
-  "editHost": "Editar Host",
-  "pinConnection": "Fixar Conexão",
-  "authentication": "Autenticação",
-  "password": "Senha",
-  "key": "Chave",
-  "sshPrivateKey": "Chave Privada SSH",
-  "keyPassword": "Senha da Chave",
-  "keyType": "Tipo de Chave",
-  "enableTerminal": "Habilitar Terminal",
-  "enableTunnel": "Habilitar Túnel",
-  "enableFileManager": "Habilitar Gerenciador de Arquivos",
-  "defaultPath": "Caminho Padrão",
-  "tunnelConnections": "Conexões de Túnel",
-  "maxRetries": "Máximo de Tentativas",
-  "upload": "Enviar",
-  "updateKey": "Atualizar Chave",
-  "productionFolder": "Produção",
-  "databaseServer": "Servidor de Banco de Dados",
-  "developmentServer": "Servidor de Desenvolvimento",
-  "developmentFolder": "Desenvolvimento",
-  "webServerProduction": "Servidor Web - Produção",
-  "unknownError": "Erro desconhecido",
-  "failedToInitiatePasswordReset": "Falha ao iniciar redefinição de senha",
-  "failedToVerifyResetCode": "Falha ao verificar código de redefinição",
-  "failedToCompletePasswordReset": "Falha ao completar redefinição de senha",
-  "invalidTotpCode": "Código TOTP inválido",
-  "failedToStartOidcLogin": "Falha ao iniciar login OIDC",
-  "failedToGetUserInfoAfterOidc": "Falha ao obter informações do usuário após login OIDC",
-  "loginWithExternalProvider": "Login com provedor externo",
-  "loginWithExternal": "Login com Provedor Externo",
-  "sendResetCode": "Enviar Código de Redefinição",
-  "verifyCode": "Verificar Código",
-  "resetPassword": "Redefinir Senha",
-  "login": "Login",
-  "signUp": "Cadastrar",
-  "failedToUpdateOidcConfig": "Falha ao atualizar configuração OIDC",
-  "failedToMakeUserAdmin": "Falha ao tornar usuário administrador",
-  "failedToStartTotpSetup": "Falha ao iniciar configuração TOTP",
-  "invalidVerificationCode": "Código de verificação inválido",
-  "failedToDisableTotp": "Falha ao desabilitar TOTP",
-  "failedToGenerateBackupCodes": "Falha ao gerar códigos de backup"
+    "validSshConfigRequired": "Deve selecionar uma configuração SSH válida da lista",
+    "updateHost": "Atualizar Host",
+    "addHost": "Adicionar Host",
+    "editHost": "Editar Host",
+    "pinConnection": "Fixar Conexão",
+    "authentication": "Autenticação",
+    "password": "Senha",
+    "key": "Chave",
+    "sshPrivateKey": "Chave Privada SSH",
+    "keyPassword": "Senha da Chave",
+    "keyType": "Tipo de Chave",
+    "enableTerminal": "Habilitar Terminal",
+    "enableTunnel": "Habilitar Túnel",
+    "enableFileManager": "Habilitar Gerenciador de Arquivos",
+    "defaultPath": "Caminho Padrão",
+    "tunnelConnections": "Conexões de Túnel",
+    "maxRetries": "Máximo de Tentativas",
+    "upload": "Enviar",
+    "updateKey": "Atualizar Chave",
+    "productionFolder": "Produção",
+    "databaseServer": "Servidor de Banco de Dados",
+    "developmentServer": "Servidor de Desenvolvimento",
+    "developmentFolder": "Desenvolvimento",
+    "webServerProduction": "Servidor Web - Produção",
+    "unknownError": "Erro desconhecido",
+    "failedToInitiatePasswordReset": "Falha ao iniciar redefinição de senha",
+    "failedToVerifyResetCode": "Falha ao verificar código de redefinição",
+    "failedToCompletePasswordReset": "Falha ao completar redefinição de senha",
+    "invalidTotpCode": "Código TOTP inválido",
+    "failedToStartOidcLogin": "Falha ao iniciar login OIDC",
+    "failedToGetUserInfoAfterOidc": "Falha ao obter informações do usuário após login OIDC",
+    "loginWithExternalProvider": "Login com provedor externo",
+    "loginWithExternal": "Login com Provedor Externo",
+    "sendResetCode": "Enviar Código de Redefinição",
+    "verifyCode": "Verificar Código",
+    "resetPassword": "Redefinir Senha",
+    "login": "Login",
+    "signUp": "Cadastrar",
+    "failedToUpdateOidcConfig": "Falha ao atualizar configuração OIDC",
+    "failedToMakeUserAdmin": "Falha ao tornar usuário administrador",
+    "failedToStartTotpSetup": "Falha ao iniciar configuração TOTP",
+    "invalidVerificationCode": "Código de verificação inválido",
+    "failedToDisableTotp": "Falha ao desabilitar TOTP",
+    "failedToGenerateBackupCodes": "Falha ao gerar códigos de backup"
   },
   "mobile": {
-  "selectHostToStart": "Selecione um host para iniciar sua sessão do terminal",
-  "limitedSupportMessage": "O suporte móvel do site ainda está em desenvolvimento. Use o aplicativo móvel para uma melhor experiência.",
-  "mobileAppInProgress": "Aplicativo móvel em desenvolvimento",
-  "mobileAppInProgressDesc": "Estamos trabalhando em um aplicativo móvel dedicado para proporcionar uma melhor experiência em dispositivos móveis.",
-  "viewMobileAppDocs": "Instalar Aplicativo Móvel",
-  "mobileAppDocumentation": "Documentação do Aplicativo Móvel"
+    "selectHostToStart": "Selecione um host para iniciar sua sessão do terminal",
+    "limitedSupportMessage": "O suporte móvel do site ainda está em desenvolvimento. Use o aplicativo móvel para uma melhor experiência.",
+    "mobileAppInProgress": "Aplicativo móvel em desenvolvimento",
+    "mobileAppInProgressDesc": "Estamos trabalhando em um aplicativo móvel dedicado para proporcionar uma melhor experiência em dispositivos móveis.",
+    "viewMobileAppDocs": "Instalar Aplicativo Móvel",
+    "mobileAppDocumentation": "Documentação do Aplicativo Móvel"
   }
 }
