--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -567,7 +567,17 @@
     "passwordRequired": "密码为必填项",
     "confirmExport": "确认导出",
     "exportDescription": "将SSH主机和凭据导出为SQLite文件",
-    "importDescription": "导入SQLite文件并进行增量合并（跳过重复项）"
+    "importDescription": "导入SQLite文件并进行增量合并（跳过重复项）",
+    "criticalWarning": "严重警告",
+    "cannotDisablePasswordLoginWithoutOIDC": "无法在未配置 OIDC 的情况下禁用密码登录！您必须先配置 OIDC 认证，然后再禁用密码登录，否则您将失去对 Termix 的访问权限。",
+    "confirmDisablePasswordLogin": "您确定要禁用密码登录吗？在继续之前，请确保 OIDC 已正确配置并且正常工作，否则您将失去对 Termix 实例的访问权限。",
+    "passwordLoginDisabled": "密码登录已成功禁用",
+    "passwordLoginAndRegistrationDisabled": "密码登录和新账户注册已成功禁用",
+    "requiresPasswordLogin": "需要启用密码登录",
+    "passwordLoginDisabledWarning": "密码登录已禁用。请确保 OIDC 已正确配置，否则您将无法登录 Termix。",
+    "oidcRequiredWarning": "严重警告：密码登录已禁用。如果您重置或错误配置 OIDC，您将失去对 Termix 的所有访问权限并使您的实例无法使用。只有在您完全确定的情况下才能继续。",
+    "confirmDisableOIDCWarning": "警告：您即将在密码登录也已禁用的情况下禁用 OIDC。这将使您的 Termix 实例无法使用，您将失去所有访问权限。您确定要继续吗？",
+    "failedToUpdatePasswordLoginStatus": "更新密码登录状态失败"
   },
   "hosts": {
     "title": "主机管理",
@@ -755,7 +765,26 @@
     "failedToMoveToFolder": "移动主机到文件夹失败",
     "statistics": "统计",
     "enabledWidgets": "已启用组件",
-    "enabledWidgetsDesc": "选择要为此主机显示的统计组件"
+    "enabledWidgetsDesc": "选择要为此主机显示的统计组件",
+    "monitoringConfiguration": "监控配置",
+    "monitoringConfigurationDesc": "配置服务器统计信息和状态的检查频率",
+    "statusCheckEnabled": "启用状态监控",
+    "statusCheckEnabledDesc": "检查服务器是在线还是离线",
+    "statusCheckInterval": "状态检查间隔",
+    "statusCheckIntervalDesc": "检查主机是否在线的频率 (5秒 - 1小时)",
+    "metricsEnabled": "启用指标监控",
+    "metricsEnabledDesc": "收集CPU、内存、磁盘和其他系统统计信息",
+    "metricsInterval": "指标收集间隔",
+    "metricsIntervalDesc": "收集服务器统计信息的频率 (5秒 - 1小时)",
+    "intervalSeconds": "秒",
+    "intervalMinutes": "分钟",
+    "intervalValidation": "监控间隔必须在 5 秒到 1 小时（3600 秒）之间",
+    "monitoringDisabled": "此主机的服务器监控已禁用",
+    "enableMonitoring": "在主机管理器 → 统计选项卡中启用监控",
+    "monitoringDisabledBadge": "监控已关闭",
+    "statusMonitoring": "状态",
+    "metricsMonitoring": "指标",
+    "terminalCustomizationNotice": "注意：终端自定义仅在桌面网站版本中有效。移动和 Electron 应用程序使用系统默认终端设置。"
   },
   "terminal": {
     "title": "终端",
